# ClashRoyale_API

./: .gitignore  readme.md
RoyaleAPI/: api.py  bucket_s3.tf  ingestors.py  lambda_function.py  main.py  makefile  pyproject.toml  writer.py  zappa_settings.json
RoyaleAPI/Terraform/: bucket_s3.tf
RoyaleAPI/royale_api/: ingestors.py  lambda_function.py  main.py  writer.py
RoyaleAPI/royale_etl/: loads3.py  raw_to_stage.py  raw_to_stage_s3.py  raw_to_stage_s3_2.py
Terraform/: bucket_s3.tf
