[tool.poetry]
name = "royaleapi_lambda"
version = "0.1.0"
description = ""
authors = ["Ricardo Gualter <ricardo.gualter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
ratelimit = "^2.2.1"
backoff = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
