[tool.poetry]
name = "royaleapi_lambda"
version = "0.1.0"
description = ""
authors = ["Ricardo Gualter <ricardo.gualter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
ratelimit = "^2.2.1"
backoff = "^2.1.2"
boto3 = "^1.24.17"
schedule = "^1.1.0"
pandas = "^1.5.3"
pyarrow = "^11.0.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
